[package]
name = "rustywin"
version = "0.0.1"
authors = ["Gian-Carlo Pascutto <gcp@sjeng.org>"]
readme = "README.md"
license = "MPL-2.0"
description = "X Windows Protocol Security Proxy"
homepage = "https://github.com/gcp/rustywin"
repository = "https://github.com/gcp/rustywin.git"

[dependencies]
clippy = { version = "*", optional = true }
log = "0.4"
env_logger = "0.5.8"
nix = "0.11"
libc = "0.2"
itertools = "0.7"
byteorder = "1.2"
dirs = "1.0"

[dependencies.clap]
version = "2.31.2"
default-features = false

[features]
default = []

[[bin]]
name = "rustywin"
